--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "he/him"  
   bio              : "Grade 12 international student interested in Statistics and Machine Learning."
   location         : "Ottawa, Ontario, Canada"
-  employer         : "Red Brick University"
+  employer         : ""
   uri              : # URL
   email            : "harry.king0927@gmail.com" 
 
